<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageAccountActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#ccc"
        android:contentDescription="@string/_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/hello"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.731">

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_row="0"
            android:layout_column="3"
            android:background="@color/lightOrange"
            android:onClick="goToSubscribeAct"
            android:text="@string/go_ad_free"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/lightOrange"
            android:onClick="shareApp"
            android:text="@string/share_with_buddies"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/lightOrange"
            android:onClick="logOutNow"
            android:text="@string/log_out"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:onClick="deleteAccount"
            android:background="@color/lightOrange"
            android:text="@string/delete_account"
            android:textSize="18sp" />


    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>