<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:letterSpacing="0.125"
        android:text="@string/welcome"
        android:textColor="#222"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/please_login_to_continue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/email_login_field"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/input_bg"
        android:hint="@string/enter_your_email_here"
        android:inputType="textEmailAddress"
        android:paddingStart="40dp"
        android:paddingEnd="30dp"
        android:textColor="@color/bgDarkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="@string/enter_your_email_here" />

    <EditText
        android:id="@+id/pass_login_field"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingStart="40dp"
        android:paddingEnd="30dp"
        android:textColor="@color/bgDarkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login_field"
        android:autofillHints="@string/enter_your_password" />


    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_bg"
        android:text="@string/sign_in"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_login_field" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/not_an_user_click"
        android:textColor="#333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

    <Button
        android:id="@+id/redirect_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:background="#fff"
        android:letterSpacing="0.235"
        android:text="@string/sign_up"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/forgot_password_click"
        android:textColor="#333"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="resetPassword"
        android:background="#fff"
        android:letterSpacing="0.235"
        android:text="@string/reset_it"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/redirect_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/redirect_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>